force-app/main/default/objects/Opportunity/fields/BillingGenerationActive__c.field-meta.xml
<CustomField><fullName>BillingGenerationActive__c</fullName><defaultValue>false</defaultValue><label>Facturation planifiée active</label><type>Checkbox</type></CustomField>