force-app/main/default/objects/Opportunity/fields/BillingRule__c.field-meta.xml
<CustomField><fullName>BillingRule__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Règle de facturation</label><referenceTo>BillingRule__c</referenceTo><relationshipLabel>Opportunités</relationshipLabel><relationshipName>Opportunities</relationshipName><required>false</required><type>Lookup</type></CustomField>