force-app/main/default/objects/Opportunity/fields/LastBilledDate__c.field-meta.xml
<CustomField><fullName>LastBilledDate__c</fullName><label>Dernière date facturée</label><required>false</required><type>Date</type></CustomField>