force-app/main/default/objects/Opportunity/fields/LastBillingError__c.field-meta.xml
<CustomField><fullName>LastBillingError__c</fullName><label>Dernière erreur de facturation</label><length>32768</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>