force-app/main/default/objects/Opportunity/fields/NextBillingDate__c.field-meta.xml
<CustomField><fullName>NextBillingDate__c</fullName><label>Prochaine date de facturation</label><required>false</required><type>Date</type></CustomField>