force-app/main/default/objects/Opportunity/validationRules/BillingScheduleRequiresConfiguration.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingScheduleRequiresConfiguration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(BillingGenerationActive__c, OR(ISBLANK(BillingRule__c), ISBLANK(NextBillingDate__c)))</errorConditionFormula>
    <errorMessage>Sélectionnez une règle et une prochaine date avant d’activer la facturation planifiée.</errorMessage>
</ValidationRule>